# bot

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  config.json  currencies.json  docker-compose.yml
.github/workflows/: rust.yml
src/: config.rs  errors.rs  lib.rs  loader.rs  main.rs
src/bot/: commander.rs  commands.rs  dispatcher.rs  messager.rs  mod.rs
src/bot/callbacks/: cobalt_pagination.rs  delete.rs  mod.rs  module.rs  transcription.rs  translate.rs  whisper.rs
src/bot/commands/: currency_settings.rs  mod.rs  settings.rs  speech_recognition.rs  start.rs  translate.rs
src/bot/handlers/: commander.rs  currency_settings.rs  mod.rs  speech_recognition.rs  translate.rs
src/bot/inlines/: cobalter.rs  currency.rs  mod.rs  translate.rs  whisper.rs
src/bot/keyboards/: cobalt.rs  delete.rs  mod.rs  transcription.rs  translate.rs
src/bot/messages/: chat.rs  messager.rs  mod.rs  sounder.rs
src/bot/modules/: cobalt.rs  currency.rs  mod.rs  registry.rs  translate.rs  whisper.rs
src/config/: mod.rs
src/core/: mod.rs
src/core/config/: json.rs  mod.rs
src/core/db/: functions.rs  mod.rs  redis.rs  schemas.rs
src/core/services/: cobalt.rs  currencier.rs  currency.rs  mod.rs  speech_recognition.rs  transcription.rs  translation.rs
src/db/: functions.rs  mod.rs  redis.rs  schemas.rs
src/db/schemas/: group.rs  settings.rs  user.rs
src/handlers/: commander.rs  keyboards.rs  mod.rs
src/handlers/commands/: mod.rs  settings.rs  speech_recognition.rs  start.rs  translate.rs
src/handlers/markups/: currency_keyboard.rs  markuper.rs  mod.rs
src/handlers/messages/: chat.rs  messager.rs  mod.rs  sounder.rs
src/keyboards/: inline.rs
src/util/: db.rs  enums.rs  errors.rs  inline.rs  json.rs  mod.rs  paginator.rs  transcription.rs
src/util/currency/: converter.rs  mod.rs  structs.rs
(+34 files in other folders)
