[package]
name = "fulturate"
version = "0.0.7-rs-dev"
edition = "2024"

[dependencies]
teloxide = { version = "0.13.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
sysinfo = "0.33.1"
reqwest = "0.11.27"
bytes = "1.10.0"
gem-rs = "0.1.75"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11.1"
thiserror = "2.0.12"
once_cell = "1.21.3"