[package]
name = "fulturate"
version = "0.0.11-rs"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
sysinfo = "0.37.0"
reqwest = "0.12.22"
bytes = "1.10.0"
gem-rs = "0.1.80"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11.1"
thiserror = "2.0.12"
once_cell = "1.21.3"
oximod = "0.1.11"
mongodb = "3.2.5"
