[package]
name = "fulturate"
version = "0.0.11-rs"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
sysinfo = "0.37.0"
reqwest = "0.12.22"
bytes = "1.10.0"
gem-rs = "0.1.80"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11.1"
thiserror = "2.0.12"
once_cell = "1.21.3"
oximod = "0.1.11"
mongodb = "3.2.5"
async-trait = "0.1.88"
log = "0.4.27"
pretty_env_logger = "0.5.0"
uuid = { version = "1.17.0", features = ["v4"] }
ccobalt = { git = "https://github.com/fulturate/ccobalt.git" }
translators = { version = "0.1.5", features = ["google", "tokio-async"] }
redis = { version = "0.32.5", features = ["tokio-comp"] }
redis-macros = { version = "0.5.6" }
url = "2.5.4"
base64 = "0.22.1"
mime = "0.3.17"
md5 = "0.7.0"
futures = "0.3.31"